--- a/templates/login.html
+++ b/templates/login.html
@@ -35,7 +35,7 @@
   
         <p class="signup-link">
           No account?
-          <a href="">Sign up</a>
+          <a href="./register.html">Sign up</a>
         </p>
      </form>
 </body>
