--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,21 @@
 /* From Uiverse.io by Yaya12085 */ 
+
+
+body {
+   /* Faz o body ocupar a altura toda da tela */
+   min-height: 100vh;
+   margin: 0;
+   
+   /* Ativa o Flexbox para centralizar o filho (o form) */
+   display: flex;
+   align-items: center; /* Vertical */
+   justify-content: center; /* Horizontal */
+   
+   /* Opcional: cor de fundo da página para contrastar com o form escuro */
+   background-color: #212121; 
+}
 .form {
-  background-color: #212121;
+  background-color: #fff;
   display: block;
   padding: 1rem;
   max-width: 350px;
