--- a/static/register_style.css
+++ b/static/register_style.css
@@ -1,15 +1,3 @@
-
-body {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   height: 100vh;
-   background-color: rgba(31, 41, 55, 1);
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
- }
-
-
-
 .form-container {
    width: 320px;
    border-radius: 0.75rem;
@@ -60,17 +48,19 @@ body {
    justify-content: flex-end;
    font-size: 0.75rem;
    line-height: 1rem;
-   color: rgba(156, 163, 175,1);
+   color: rgba(156, 163, 175, 1);
    margin: 8px 0 14px 0;
  }
  
- .forgot a,.signup a {
+ .forgot a,
+ .signup a {
    color: rgba(243, 244, 246, 1);
    text-decoration: none;
    font-size: 14px;
  }
  
- .forgot a:hover, .signup a:hover {
+ .forgot a:hover,
+ .signup a:hover {
    text-decoration: underline rgba(167, 139, 250, 1);
  }
  
@@ -131,4 +121,3 @@ body {
    line-height: 1rem;
    color: rgba(156, 163, 175, 1);
  }
- 
