--- a/templates/register.html
+++ b/templates/register.html
@@ -4,27 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Page</title>
-    <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="/static/register_style.css">
 </head>
 <body>
-      <header>
-         <h1>Página de Registro</h1>
-      </header>
-      <form action="/register" method="post">
-          <label for="username">Nome de Usuário:</label>
-          <input type="text" id="username" name="username" required>
-          <br>
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required>
-          <br>
-          <label for="password">Senha:</label>
-          <input type="password" id="password" name="password" required>
-          <br>
-          <label for="confirm_password">Confirme a Senha:</label>
-          <input type="password" id="confirm_password" name="confirm_password" required>
-          <br>
-          <button type="submit">Registrar</button>
-      <footer>
-         <p>&copy; 2025 My Website</p>
-      </footer>
+   <div class="form-container">
+      <p class="title">Login</p>
+      <form class="form">
+        <div class="input-group">
+          <label for="name">Name</label>
+          <input placeholder="" id="username" name="username" type="text" />
+        </div>
+        <div class="input-group">
+          <label for="phone">Phone</label>
+          <input placeholder="" id="phone" name="phone" type="phone" />
+          <label for="email">Email</label>
+          <input placeholder="" id="email" name="email" type="email" />
+          <label for="location">Location</label>
+          <input placeholder="" type="email" />
+        </div>
+        <button style="margin-top:6%;" class="sign">Submit</button>
+      </form>
+      <div class="social-message">
+        <div class="line"></div>
+        <p class="message">Entre Details to view Virtual Tour</p>
+        <div class="line"></div>
+      </div>
+    </div>
 </html>
