organizado e com CRUD funcional

--- a/app/rotas/Login/templates/login.html
+++ b/app/rotas/Login/templates/login.html
@@ -47,7 +47,7 @@
 		</button>
 	</div>
 	<p class="signup">Don't have an account?
-		<a rel="noopener noreferrer" href="{{ url_for('register') }}" class="">Sign up</a>
+		<a rel="noopener noreferrer" href="{{ url_for('login.register') }}" class="">Sign up</a>
 	</p>
 </div>
     
