--- a/app/rotas/Dashboard/templates/dashboards.html
+++ b/app/rotas/Dashboard/templates/dashboards.html
@@ -7,6 +7,7 @@
 </head>
 <body>
    <h1>Dashboard Page</h1>
-   <a href="{{ url_for('logout') }}">Logout</a>
+   <a href="{{ url_for('login.logout') }}">Logout</a>
+   <a href="{{ url_for('veiculos.add_veiculo') }}">Add Vehicle</a>
 </body>
 </html>
