creating admin-client login

--- a/app/rotas/Register/templates/register_cliente.html
+++ b/app/rotas/Register/templates/register_cliente.html
@@ -9,7 +9,7 @@
 <body>
    <div class="form-container">
       <p class="title">Register</p>
-      <form class="form", method="POST" action="/register">
+      <form class="form", method="POST" action="/register_cliente">
         {{ form.hidden_tag() }}
         <div class="input-group">
           <label for="name">Name</label>
