--- a/app/rotas/Register/templates/register_choice.html
+++ b/app/rotas/Register/templates/register_choice.html
@@ -9,8 +9,8 @@
    <div class="form-container">
       <p class="title">Register Choice</p>
       <div class="button-group">
-         <a href="{{ url_for('register.register_cliente') }}" class="button1">Quero Alugar um veículo</a>
-         <a href="{{ url_for('register.register_admin') }}" class="button2">Quero Administrar minha locadora</a>
+         <a href="{{ url_for('register.register_admin') }}"><button class="button">Register as Admin</button></a>
+         <a href="{{ url_for('register.register_cliente') }}"><button class="button">Register as Client</button></a>
       </div>
 </body>
 </html>
