--- a/app/rotas/Login/templates/login_cliente.html
+++ b/app/rotas/Login/templates/login_cliente.html
@@ -47,5 +47,5 @@
 		</button>
 	</div>
 	<p class="signup">Don't have an account?
-		<a rel="noopener noreferrer" href="{{ url_for('register.register_choice') }}" class="">Sign up</a>
+		<a rel="noopener noreferrer" href="{{ url_for('register.register_cliente') }}" class="">Sign up</a>
 	</p>
