fixing dashboard and display admin

--- a/app/rotas/Register/templates/register_cliente.html
+++ b/app/rotas/Register/templates/register_cliente.html
@@ -16,7 +16,7 @@
           {{ form.username(class="input") }}
         </div>
         <div class="input-group">
-          <label for="Password">Phone</label>
+          <label for="Password">Password</label>
           {{ form.password(class="input") }}
           <label for="email">Email</label>
           <!-- <input placeholder="" id="email" name="email" type="email" /> -->
