--- a/app/rotas/Veiculos/templates/display_veiculos.html
+++ b/app/rotas/Veiculos/templates/display_veiculos.html
@@ -19,8 +19,8 @@
            <td>{{ v.modelo }}</td>
            <td>{{ v.ano }}</td>
            <td>{{ v.diaria }}</td>
-           <a href="/editar_veiculo/{{ v.id }}">Deletar</a>
-         
+           <td><a href="/editar_veiculo/{{ v.id }}">Editar</a></td>
+            
        </tr>
        {% endfor %}
 </body>
