--- a/app/rotas/Dashboard/templates/dashboards.html
+++ b/app/rotas/Dashboard/templates/dashboards.html
@@ -9,6 +9,6 @@
    <h1>Dashboard Page</h1>
    <a href="{{ url_for('login.logout') }}">Logout</a>
    <a href="{{ url_for('veiculos.add_veiculo') }}">Add Vehicle</a>
-   <a href="{{ url_for('veiculos.display_veiculos') }}">View Vehicles</a>
+   <a href="{{ url_for('veiculos.display_veiculos_admin') }}">View Vehicles</a>
 </body>
 </html>
