--- a/app/rotas/Veiculos/templates/editar_veiculo.html
+++ b/app/rotas/Veiculos/templates/editar_veiculo.html
@@ -60,5 +60,9 @@
       <div>
          {{ form.submit(class="sign") }}
       </div>
+   <form method="POST" action="{{ url_for('veiculos.deletar_veiculo', id=veiculo.id) }}">
+      <button type="submit">Deletar</button>
+   </form>
+   <p>Url para deletar: {{ url_for('veiculos.deletar_veiculo', id=veiculo.id) }}</p>
 </body>
 </html>
