--- a/app/rotas/Veiculos/templates/display_veiculos.html
+++ b/app/rotas/Veiculos/templates/display_veiculos.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel ="stylesheet" href="/static/style_display.css">
+   <link rel="stylesheet" href="{{ url_for('static', filename='style_display.css') }}">
    <title>Veiculos</title>
 </head>
 <body>
