--- a/app/rotas/Alugar/templates/alugar_veiculo.html
+++ b/app/rotas/Alugar/templates/alugar_veiculo.html
@@ -6,6 +6,7 @@
    <title>Alugar {{ veiculo.marca }} {{ veiculo.modelo }}</title>
 </head>
 <body>
+   <p>Alugar Veículo: {{ veiculo.marca }} {{ veiculo.modelo }}</p>
    
 </body>
 </html>
