--- a/app/rotas/Veiculos/templates/display_veiculos.html
+++ b/app/rotas/Veiculos/templates/display_veiculos.html
@@ -17,7 +17,16 @@
              <div class="car-price">
                  <span>{{veiculo.diaria}}</span> / dia
              </div>
-             <a href="{{ url_for('alugar.alugar_veiculo', id=veiculo.id) }}" class="car-action">Alugar Agora</a>
+         </div>   
+      <div onclick="openModal()" class="btn">Alugar</div>
+      <div id="modal-container" class="modal-container">
+         <div class="modal">
+            <button class="fechar">Fechar</button>
+            <h1>Detalhes do Aluguel</h1>
+            <p>Marca: {{veiculo.marca}}</p>
+            <p>Modelo: {{veiculo.modelo}}</p>
+            <p>Diária: {{veiculo.diaria}}</p>
+            <p>Dias de Aluguel: {{dias}}</p>
          </div>
      </div>
       {% endfor %}
