--- a/app/rotas/Veiculos/templates/display_veiculos.html
+++ b/app/rotas/Veiculos/templates/display_veiculos.html
@@ -16,19 +16,18 @@
              <p class="car-description">{{veiculo.modelo}}</p>
              <div class="car-price">
                  <span>{{veiculo.diaria}}</span> / dia
+               
              </div>
-         </div>   
-      <div onclick="openModal()" class="btn">Alugar</div>
-      <div id="modal-container" class="modal-container">
-         <div class="modal">
-            <button class="fechar">Fechar</button>
-            <h1>Detalhes do Aluguel</h1>
-            <p>Marca: {{veiculo.marca}}</p>
-            <p>Modelo: {{veiculo.modelo}}</p>
-            <p>Diária: {{veiculo.diaria}}</p>
-            <p>Dias de Aluguel: {{dias}}</p>
+             <div onclick="openModal()" class="btn">Alugar</div>
          </div>
      </div>
       {% endfor %}
+   <div id="modal-container" class="modal-container">
+      <div class="modal">
+         <button class="fechar">Fechar</button>
+         <h1>Formulário de Aluguel</h1>
+      </div>
+   </div>      
+   <script src="script.js"></script>
 </body>
 </html>
