--- a/app/static/style_display.css
+++ b/app/static/style_display.css
@@ -143,7 +143,7 @@ body{
 @keyframes animate-modal {
    from{
        opacity: 0;
-       transform: translate3d(0, 100vh, 0);
+       transform: translate3d(0, 100%, 0);
    }
 
    to{
