--- a/app/static/style_display.css
+++ b/app/static/style_display.css
@@ -6,6 +6,14 @@
    font-family: "Outfit", sans-serif;
 }
 
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+}
+
 .car-card {
     display: flex;
     flex-direction: column;
@@ -112,6 +120,7 @@ body{
 }
 
 .modal{
+   position: relative;
    width: 90%;
    height: auto;
    min-width:400px;
