--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,3 +1,10 @@
+/* Container do Card */
+*{
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   font-family: "Outfit", sans-serif;
+}
 
 body {
    display: flex;
